# perdue

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  package.json
.github/workflows/: fly-deploy.yml
app/: Cargo.toml  Dockerfile  fly.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
app/assets/: main.css
app/migrations/: 1_down.sql  1_up.sql  2_down.sql  2_up.sql  3_down.sql  3_up.sql
app/src/: agriculture.rs  college.rs  configuration.rs  directory.rs  error.rs  health.rs  html.rs  http.rs  id.rs  lib.rs  main.rs  parser.rs  pipeline.rs  scraper.rs  server.rs
app/templates/: directory.html  directory_filter.html  directory_filter_menu.html  directory_heading.html  list_students.html  page.html  string_input.html
app/tests/: health_test.rs  liberal_arts.rs
assets/: main.css
configuration/: Cargo.toml  README.md  lib.rs  local.json  production.json
data/: perdue_salaries_2023.csv
migrate/: Cargo.toml  Dockerfile
migrate/src/: cli.rs  configuration.rs  main.rs
migrations/: 1_up.sql  2_up.sql
mock_http/: Cargo.toml  README.md  lib.rs
scripts/: govsalaries_curl
src/: agriculture.rs  college.rs  configuration.rs  database.rs  education.rs  health.rs  html.rs  lib.rs  liberal_arts.rs  main.rs  parser.rs  salary.rs  scrapper.rs  server.rs
templates/: college_page.html  list_students.html
tests/: agriculture_test.rs  health_test.rs
