[package]
name = "perdue"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15" }
reqwest = { version = "0.12.0", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
askama = "0.12.1"
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
r2d2_sqlite = "0.24.0"
r2d2 = "0.8.10"
rusqlite = "0.31.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
url = "2.5.2"
csv = "1.3.0"
