[package]
name = "perdue"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15" }
reqwest = { version = "0.12.0", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
askama = "0.12.1"
r2d2_sqlite = "0.24.0"
r2d2 = "0.8.10"
rusqlite = { version = "0.31.0" }
csv = "1.3.0"
futures = "0.3.30"
anyhow = "1.0.86"
num-format = "0.4.4"
tiny_http = "0.12.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
mock_http = { path = "../mock_http" }
